# AnyType

./: AnyType.cpp  AnyType.h  CMakeLists.txt  main.cpp  tests.cpp
